Add audio clips to web app

--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -236,15 +236,15 @@
             </div>
 
             <div class="col-lg-4 col-sm-6">
-                <a href="static/img/portfolio/fullsize/Country/262613166.jpg" data-group="3" class="galleryItem portfolio-box" title="Kenny Chesney: Be As You Are (2005)">
-                    <img src="static/img/portfolio/thumbnails/262613166.jpg" height= "150" width= "750" class="img-responsive" alt="">
+                <a href="static/img/portfolio/fullsize/Country/kc_hw.jpeg" data-group="3" class="galleryItem portfolio-box" title="Kenny Chesney: Hemmingway's Whiskey (2010)">
+                    <img src="static/img/portfolio/thumbnails/kc_hw.jpeg" height= "150" width= "750" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
                                 Country
                             </div>
                             <div class="project-category text-faded">
-                                Kenny Chesney: Be As You Are
+                                Kenny Chesney: Hemmingway's Whiskey
                             </div>
                         </div>
                     </div>
@@ -330,7 +330,7 @@
             </div>
 
             <div class="col-lg-4 col-sm-6">
-                <a href="static/img/portfolio/fullsize/Electronic/498552145.jpg" data-group="6" class="galleryItem portfolio-box">
+                <a href="static/img/portfolio/fullsize/Electronic/498552145.jpg" data-group="6" class="galleryItem portfolio-box" title="Kuba: Random Precision (2012)">
                     <img src="static/img/portfolio/thumbnails/498552145.jpg" height= "150" width= "750" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -386,39 +386,40 @@
             </div>
 
             <div class="col-lg-4 col-sm-6">
-                <a href="static/img/portfolio/fullsize/Pop/559334659.jpg" data-group="8" class="galleryItem portfolio-box" title="Michael Jackson: Bad (1987)">
-                    <img src="static/img/portfolio/thumbnails/559334659.jpg" height= "150" width= "750" class="img-responsive" alt="">
+                <a href="static/img/portfolio/fullsize/Pop/1051394208.jpg" data-group="8" class="galleryItem portfolio-box" title="Adele: 25 (2015)">
+                    <img src="static/img/portfolio/thumbnails/1051394208.jpg" height= "150" width= "750" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
                                 Pop
                             </div>
                             <div class="project-category text-faded">
-                                Michael Jackson: Bad
+                                Adele: 25
                             </div>
                         </div>
                     </div>
                 </a>
+
+                <a href="static/img/portfolio/fullsize/Pop/559334659.jpg" data-group="8" class="galleryItem portfolio-box" title="Michael Jackson: Bad (1987)"></a>
                 <a href="static/img/portfolio/fullsize/Pop/251101179.jpg" data-group="8" class="galleryItem portfolio-box" title="Whitney Houston: Whitney: The Greatest Hits (2000)"></a>
                 <a href="static/img/portfolio/fullsize/Pop/252606580.jpg" data-group="8" class="galleryItem portfolio-box" title="Justin Timberlake: Justified (2002)"></a>
                 <a href="static/img/portfolio/fullsize/Pop/315025768.jpg" data-group="8" class="galleryItem portfolio-box" title="Avril Lavigne: Let Go (2002)"></a>
-                <a href="static/img/portfolio/fullsize/Pop/1051394208.jpg" data-group="8" class="galleryItem portfolio-box" title="Adele: 25 (2016)"></a>
                 <a href="static/img/portfolio/fullsize/Pop/388127285.jpg" data-group="8" class="galleryItem portfolio-box" title="John Legend: Where the Light Is: John Mayer Live In Los Angeles (2007)"></a>
-                <a href="static/img/portfolio/fullsize/Pop/458413837.jpg" data-group="8" class="galleryItem portfolio-box"></a>
-                <a href="static/img/portfolio/fullsize/Pop/361487155.jpg" data-group="8" class="galleryItem portfolio-box"></a>
-                <a href="static/img/portfolio/fullsize/Pop/318390146.jpg" data-group="8" class="galleryItem portfolio-box"></a>
-                <a href="static/img/portfolio/fullsize/Pop/296016891.jpg" data-group="8" class="galleryItem portfolio-box"></a>
+                <a href="static/img/portfolio/fullsize/Pop/458413837.jpg" data-group="8" class="galleryItem portfolio-box" title="Rihanna: Loud (2010)"></a>
+                <a href="static/img/portfolio/fullsize/Pop/361487155.jpg" data-group="8" class="galleryItem portfolio-box" title="Justin Beiber: My World 2.0 (2010)"></a>
+                <a href="static/img/portfolio/fullsize/Pop/318390146.jpg" data-group="8" class="galleryItem portfolio-box" title="Black Eyed Peas: The E.N.D. (The Energy Never Dies) (2009)"></a>
+                <a href="static/img/portfolio/fullsize/Pop/296016891.jpg" data-group="8" class="galleryItem portfolio-box" title="Beyonce: I Am... Sasha Fierce"></a>
                 <a href="static/img/portfolio/fullsize/Pop/580695794.jpg" data-group="8" class="galleryItem portfolio-box" title="Matchbox Twenty: Yourself or Someone Like You (1996)"></a>
                 <a href="static/img/portfolio/fullsize/Pop/80812428.jpg" data-group="8" class="galleryItem portfolio-box" title="Madonna: The Immaculate Collection (1990)"></a>
-                <a href="static/img/portfolio/fullsize/Pop/361487155.jpg" data-group="8" class="galleryItem portfolio-box"></a>
+                <a href="static/img/portfolio/fullsize/Pop/723398173.jpg" data-group="8" class="galleryItem portfolio-box" title="Spice Girls: Spice (1996)"></a>
                 <a href="static/img/portfolio/fullsize/Pop/318390146.jpg" data-group="8" class="galleryItem portfolio-box"></a>
                 <a href="static/img/portfolio/fullsize/Pop/296016891.jpg" data-group="8" class="galleryItem portfolio-box"></a>
 
             </div>
 
             <div class="col-lg-4 col-sm-6">
-                <a href="static/img/portfolio/fullsize/Rnb_Soul/270246704.jpg" data-group="9" class="galleryItem portfolio-box" title="TLC: CrazySexyCool (1994)">
-                    <img src="static/img/portfolio/thumbnails/270246704.jpg" height= "150" width= "750" class="img-responsive" alt="">
+                <a href="static/img/portfolio/fullsize/Rnb_Soul/266809606.jpg" data-group="9" class="galleryItem portfolio-box" title="Destiny's Child: Writing's On the Wall (1999)">
+                    <img src="static/img/portfolio/thumbnails/266809606.jpg" height= "150" width= "750" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -438,7 +439,7 @@
                 <a href="static/img/portfolio/fullsize/Rnb_Soul/250689978.jpg" data-group="9" class="galleryItem portfolio-box" title="Babyface: A Collection of His Greatest Hits (2000)"></a>
                 <a href="static/img/portfolio/fullsize/Rnb_Soul/251898230.jpg" data-group="9" class="galleryItem portfolio-box" title="Janet Jackson: Design of a Decade: 1986-1996 (1995)"></a>
                 <a href="static/img/portfolio/fullsize/Rnb_Soul/255342344.jpg" data-group="9" class="galleryItem portfolio-box" title="Alicia Keys: The Diary of Alicia Keys (2003)"></a>
-                <a href="static/img/portfolio/fullsize/Rnb_Soul/266809606.jpg" data-group="9" class="galleryItem portfolio-box" title="Destiny's Child: Writing's On the Wall (1999)"></a>
+                <a href="static/img/portfolio/fullsize/Rnb_Soul/270246704.jpg" data-group="9" class="galleryItem portfolio-box" title="TLC: CrazySexyCool (1994)"></a>
                 <a href="static/img/portfolio/fullsize/Rnb_Soul/264260823.jpg" data-group="9" class="galleryItem portfolio-box" title="Keyshia Cole: Just Like You (2007)"></a>
                 <a href="static/img/portfolio/fullsize/Rnb_Soul/315027449.jpg" data-group="9" class="galleryItem portfolio-box" title="John Legend: Get Lifted (2005)"></a>
                 <a href="static/img/portfolio/fullsize/Rnb_Soul/323573096.jpg" data-group="9" class="galleryItem portfolio-box" title="Natalie Cole: Leavin' (2006)"></a>
@@ -461,6 +462,12 @@
                         </div>
                     </div>
                 </a>
+                <!-- <iframe src="static/img/portfolio/audio/controlla_clip.mp3" data-group="10" class="galleryItem portfolio-box mfp-hide white-popup"></iframe> -->
+                <!-- <a>
+                <img src="static/img/portfolio/fullsize/Hip-Hop/1109766593.jpg" data-group="10" class="galleryItem portfolio-box"></img>
+                <audio controls>
+                  <source src="static/img/portfolio/audio/controlla_clip.mp3" data-group="10" class="galleryItem portfolio-box" width="300" margin="0" auto>
+                </audio></a> -->
                 <a href="static/img/portfolio/fullsize/Hip-Hop/1020503805.jpg" data-group="10" class="galleryItem portfolio-box"></a>
                 <a href="static/img/portfolio/fullsize/Hip-Hop/1023500961.jpg" data-group="10" class="galleryItem portfolio-box"></a>
                 <a href="static/img/portfolio/fullsize/Hip-Hop/1051693354.jpg" data-group="10" class="galleryItem portfolio-box"></a>
@@ -534,6 +541,87 @@
         </div>
     </div>
   </div>
+
+  <button id="open-popup">Listen to a few of our samples!</button>
+
+<div id="my-popup" data-group= "13" class="mfp-hide white-popup portfolio-box">
+  Blues - B. B. King: Paying the Cost to be the Boss (2000)
+  <img src="static/img/portfolio/fullsize/Blues/515588.jpg" class="galleryItem portfolio-box" align="center"></img>
+  <audio controls>
+    <source src="static/img/portfolio/audio/blues_payingTheCostToBeTheBoss.mp3" class="portfolio-box" align="center">
+  </audio>
+</div>
+<div id="my-popup3" data-group= "13" class="mfp-hide white-popup portfolio-box">
+  Country - Kenny Chesney: Somewhere With You (2010)
+  <img src="static/img/portfolio/fullsize/Country/kc_hw.jpeg" class="galleryItem portfolio-box" align="center"></img>
+  <audio controls>
+    <source src="static/img/portfolio/audio/country_somewhereWithYou.mp3" class="portfolio-box" align="center">
+  </audio>
+</div>
+<div id="my-popup4" data-group= "13" class="mfp-hide white-popup portfolio-box">
+  Dance - La Roux: Bulletproof (2015)
+  <img src="static/img/portfolio/fullsize/Dance/331339668.jpg" class="galleryItem portfolio-box" align="center"></img>
+  <audio controls>
+    <source src="static/img/portfolio/audio/dance_bulletproof.mp3" class="portfolio-box" align="center">
+  </audio>
+</div>
+<div id="my-popup5" data-group= "13" class="mfp-hide white-popup portfolio-box">
+  Disney - Ariel: Happy Birthday, Princess (2005)
+  <img src="static/img/portfolio/fullsize/Disney/156780227.jpg" class="galleryItem portfolio-box" align="center"></img>
+  <audio controls>
+    <source src="static/img/portfolio/audio/disney_happyBirthdayPrincess.mp3" class="portfolio-box" align="center">
+  </audio>
+</div>
+<div id="my-popup6" data-group= "13" class="mfp-hide white-popup portfolio-box">
+  Electronic - Kuba: Hole In My Sitar (2012)
+  <img src="static/img/portfolio/fullsize/Electronic/498552145.jpg" class="galleryItem portfolio-box" align="center"></img>
+  <audio controls>
+    <source src="static/img/portfolio/audio/electronic_holeInMySitar.mp3" class="portfolio-box" align="center">
+  </audio>
+</div>
+<!-- <div id="my-popup7" data-group= "13" class="mfp-hide white-popup portfolio-box">
+  Jazz
+  <img src="static/img/portfolio/fullsize/Disney/156780227.jpg" class="galleryItem portfolio-box" align="center"></img>
+  <audio controls>
+    <source src="static/img/portfolio/audio/disney_happyBirthdayPrincess.mp3" class="portfolio-box" align="center">
+  </audio>
+</div> -->
+<div id="my-popup8" data-group= "13" class="mfp-hide white-popup portfolio-box">
+  Pop - Adele: Hello (2015)
+  <img src="static/img/portfolio/fullsize/Pop/1051394208.jpg" class="galleryItem portfolio-box" align="center"></img>
+  <audio controls>
+    <source src="static/img/portfolio/audio/pop_hello.mp3" class="portfolio-box" align="center">
+  </audio>
+</div>
+<div id="my-popup9" data-group= "13" class="mfp-hide white-popup portfolio-box">
+  R&B/Soul - Destiny's Child: Say My Name (1999)
+  <img src="static/img/portfolio/fullsize/Rnb_Soul/266809606.jpg" class="galleryItem portfolio-box" align="center"></img>
+  <audio controls>
+    <source src="static/img/portfolio/audio/rnb_sayMyName.mp3" class="portfolio-box" align="center">
+  </audio>
+</div>
+
+<div id="my-popup10" data-group= "13" class="mfp-hide white-popup portfolio-box">
+  Hip-Hop - Drake: Controlla (2015)
+  <img src="static/img/portfolio/fullsize/Hip-Hop/1109766593.jpg" class="galleryItem portfolio-box" align="center"></img>
+  <audio controls>
+    <source src="static/img/portfolio/audio/rap_controlla.mp3" class="portfolio-box" align="center">
+  </audio>
+</div>
+<div id="my-popup11" data-group= "13" class="mfp-hide white-popup portfolio-box">
+  Reggae - Bob Marley: One Love/People Get Ready
+  <img src="static/img/portfolio/fullsize/Reggae/19851211.jpg" class="galleryItem portfolio-box" align="center"></img>
+  <audio controls>
+    <source src="static/img/portfolio/audio/reggae_oneLove_peopleGetReady.mp3" class="portfolio-box" align="center">
+  </audio>
+</div>
+<div id="my-popup12" data-group= "13" class="mfp-hide white-popup portfolio-box">
+  Rock - Elvis Presley: Jailhouse Rock (1958)
+  <img src="static/img/portfolio/fullsize/Rock/217633715.jpg" class="galleryItem portfolio-box" align="center"></img>
+  <audio controls>
+    <source src="static/img/portfolio/audio/rock_jailhouseRock.mp3" class="portfolio-box" align="center">
+  </audio>
+</div>
 
 
     <!-- Contact Section -->
