Style changes for web app

--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -140,7 +140,6 @@
 							</div>
 						</a>
 					<a href="static/img/portfolio/fullsize/Blues/389611.jpg" data-group="1" class="galleryItem portfolio-box" title="Jonny Lang: Lie to Me (1997)"> </a>
-					<a href="static/img/portfolio/fullsize/Blues/1204528193.jpg" data-group="1" class="galleryItem portfolio-box" title="Otis Taylor: Fantasizing About Being Black (2017)"> </a>
 					<a href="static/img/portfolio/fullsize/Blues/356466.jpg" data-group="1" class="galleryItem portfolio-box" title="Etta James: The Essential Etta James (1993)"> </a>
 					<a href="static/img/portfolio/fullsize/Blues/871741930.jpg" data-group="1" class="galleryItem portfolio-box" title="Roy Hamilton: Have Blues, Will Travel (1958)"> </a>
 					<a href="static/img/portfolio/fullsize/Blues/1057030529.jpg" data-group="1" class="galleryItem portfolio-box" title="South Memphis String Band: Home Sweet Home (2010)"> </a>
@@ -154,7 +153,6 @@
 					<a href="static/img/portfolio/fullsize/Blues/25283.jpg" data-group="1" class="galleryItem portfolio-box" title="John Lee Hooker: The Best of John Lee Hooker 1965 to 1974 (1992)"> </a>
 					<a href="static/img/portfolio/fullsize/Blues/965205851.jpg" data-group="1" class="galleryItem portfolio-box" title="Snooks Eaglin: New Orleans Street Singer (1958)"> </a>
 					<a href="static/img/portfolio/fullsize/Blues/110792328.jpg" data-group="1" class="galleryItem portfolio-box" title="Sonny Terry: Sonny Terry: Complete Recorded Works In Chronological Order, Vol. 2 (1944-1949) (2000)"> </a>
-					<a href="static/img/portfolio/fullsize/Blues/865629797.jpg" data-group="1" class="galleryItem portfolio-box" title="John Lee Hooker: The Best of Friends (1998)"> </a>
 				</div>
 				<div class="col-lg-4 col-sm-6">
 					<a href="static/img/portfolio/fullsize/Classical/1052805256.jpg" data-group="2" class="galleryItem portfolio-box" title="Stephan Schardt & Philipp Vogler: Brahms: The Violin Sonatas (2015)">
@@ -584,7 +582,7 @@
             <h2>Model Performance</h2>
             <p>Model Performance was evaluated for the training, validation and test sets</p>
               <br align="left"><bold>Training Set:</bold> 36 classes each with an average of 750 images (unbalanced classes)</br>
-              <br>To see how the model performed on each image displayed above, click <a href="broken-link.com">here</a>
+              <br>To see how the model performed on each image displayed above, click <a href="/training">here</a>
               <br>Training accuracy: ~45% (varies iteratively)</br>
               <br><bold>Validation Set:</bold> 36 classes each with an average of 94 images</br>
               <br>Validation accuracy: 28% (varies iteratively)</br>
