--- a/web_app/templates/more-artwork.html
+++ b/web_app/templates/more-artwork.html
@@ -66,7 +66,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#home">Home</a>
+                        <a class="page-scroll" href="/">Home</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#evaluation">Evaluation</a>
@@ -831,6 +831,28 @@
     </div>
   </div>
 </section>
+
+<!-- Contact Section -->
+  <section id="contact" class="contact-section text-center">
+      <div class="row">
+          <div class="col-lg-8 col-lg-offset-2">
+              <h2>Contact</h2>
+              <p>Feel free get in touch, ask questions, or even just say hello!</p>
+              <p><a href="mailto:bowersa@hawaii.edu" class="btn btn-default btn-lg">bowersa@hawaii.edu</a>
+              </p>
+              <ul class="list-inline banner-social-buttons">
+                <!-- add link to linkedin? anything else?-->
+                  <li>
+                      <a href="https://github.com/akbowers/album_art.git" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">See This Project on Github</span></a>
+                  </li>
+                  <li>
+                      <a href="https://www.linkedin.com/in/amanda-bowers" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Connect on LinkedIn</span></a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </section>
+
       <!-- Footer -->
       <footer>
           <div class="container text-center">
