--- a/web_app/templates/results.html
+++ b/web_app/templates/results.html
@@ -1,122 +1,152 @@
+!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Predition Results</title>
-  <meta name="description" content="Album Art Identification Predictions">
-  <meta name="author" content="AmandaBowers">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <!-- Bootstrap Core CSS -->
-  <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <title>Album Art Classifier - Amanda Bowers</title>
 
-  <!-- Custom Fonts -->
-  <link href="/static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <!-- Bootstrap Core CSS -->
+    <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Theme CSS -->
-  <link href="/static/css/grayscale.min.css" rel="stylesheet">
+    <!-- Custom Fonts -->
+    <link href="static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+
+    <!-- Theme CSS -->
+    <link href="static/css/grayscale.min.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <style>
+    .newspaper {
+        -webkit-column-count: 4; /* Chrome, Safari, Opera */
+        -moz-column-count: 4; /* Firefox */
+        column-count: 4;
+    }
+    </style>
+
+    <!-- Plugin CSS -->
+    <link href="static/vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+
+    <!-- Theme CSS -->
+    <link href="static/css/creative.css" rel="stylesheet">
 
 </head>
 
-<body>
+<body id="evaluation" data-spy="scroll" data-target=".navbar-fixed-top">
 
-  <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-      <div class="container">
-          <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                  Menu <i class="fa fa-bars"></i>
-              </button>
-              <a class="navbar-brand page-scroll" href="/">
-                  <i class="fa fa-play-circle"></i> <span class="light">Album Cover</span> Identification
-              </a>
+    <!-- Navigation -->
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <i class="fa fa-play-circle"></i> <span class="light">Album Cover</span> Identification
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li>
+                        <a class="page-scroll" href="/">Home</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#evaluation">Evaluation</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+  <section id="evaluation" class="container content-section text-center">
+
+    <h1>Prediction Results</h1>
+
+          <!--TESTING-->
+          <p><b>Your photo</b> - model prediction</p>
+          <div class="container">
+              <div class="row">
+                  <div class="col-sm-4">
+                      <img class="img-responsive" src={{url_for('static', filename = photo)}} alt="photo" height="200"/>
+                  </div>
+                  <div class="col-sm-8">
+                      <img class="img-responsive" src={{url_for('static', filename = plot)}} alt="plot" height="200"/>
+                  </div>
+              </div>
           </div>
+          <br>
+          <a href="/training"><h3>See how our training images performed</h3></a>
+        </br>
+        </section>
 
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-              <ul class="nav navbar-nav">
-                  <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                  <li class="hidden">
-                      <a href="/index"></a>
-                  </li>
-              </ul>
+    <!-- Contact Section -->
+      <section id="contact" class="contact-section text-center">
+          <div class="row">
+              <div class="col-lg-8 col-lg-offset-2">
+                  <h2>Contact</h2>
+                  <p>Feel free get in touch, ask questions, or even just say hello!</p>
+                  <p><a href="mailto:bowersa@hawaii.edu" class="btn btn-default btn-lg">bowersa@hawaii.edu</a>
+                  </p>
+                  <ul class="list-inline banner-social-buttons">
+                    <!-- add link to linkedin? anything else?-->
+                      <li>
+                          <a href="https://github.com/akbowers/album_art.git" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">See This Project on Github</span></a>
+                      </li>
+                      <li>
+                          <a href="https://www.linkedin.com/in/amanda-bowers" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Connect on LinkedIn</span></a>
+                      </li>
+                  </ul>
+              </div>
           </div>
-          <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container -->
-  </nav>
-
-  <section id="about" class="container content-section text-center">
-      <div class="row">
-          <div class="col-lg-8 col-lg-offset-2">
-
-            <h1>Prediction Results</h1>
-            <br>
+      </section>
 
 
-            <ul class="list-inline banner-social-buttons">
-              <!-- add link to linkedin? anything else?-->
-                <li>
-                    <p>Photo Submitted:</p>
-                    <img src={{url_for('static', filename = photo)}} alt="photo" style="height:200px;">
-                </li>
-                <li>
-                    <p>Our Prediction:</p>
-                    <img src={{url_for('static', filename = plot)}} alt="plot" style="height:200px;">
-                </li>
-            </ul>
-            <br>
-            <br>
-            <a href="/"><h3>return to album art id</h3></a>
+      <!-- Footer -->
+      <footer>
+          <div class="container text-center">
+              <p>Copyright &copy; Amanda Bowers 2017</p>
+              <p>Photos Copyright &copy; Apple iTunes 2017</p>
           </div>
-      </div>
-  </section>
+      </footer>
 
-<!-- Contact Section -->
-  <section id="download" class="contact-section text-center">
-      <div class="row">
-          <div class="col-lg-8 col-lg-offset-2">
-              <h2>Contact</h2>
-              <p>Feel free get in touch, ask questions, or even just say hello!</p>
-              <p><a href="mailto:bowersa@hawaii.edu" class="btn btn-default btn-lg">bowersa@hawaii.edu</a>
-              </p>
-              <ul class="list-inline banner-social-buttons">
-                <!-- add link to linkedin? anything else?-->
-                  <li>
-                      <a href="https://github.com/akbowers/album_art.git" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">See This Project on Github</span></a>
-                  </li>
-                  <li>
-                      <a href="https://www.linkedin.com/in/amanda-bowers" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Connect on LinkedIn</span></a>
-                  </li>
-              </ul>
-          </div>
-      </div>
-  </section>
+    <!-- jQuery -->
+    <script src="static/vendor/jquery/jquery.js"></script>
 
-  <!-- Footer -->
-  <footer>
-      <div class="container text-center">
-          <p>Copyright &copy; Amanda Bowers 2017</p>
-          <p>Photos Copyright &copy; Apple iTunes 2017</p>
-      </div>
-  </footer>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="static/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
-  <!-- jQuery -->
-  <script src="/static/vendor/jquery/jquery.js"></script>
 
-  <!-- Bootstrap Core JavaScript -->
-  <script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Plugin JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-  <!-- Plugin JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <!-- Plugin JavaScript -->
+      <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+      <script src="static/vendor/scrollreveal/scrollreveal.min.js"></script>
+      <script src="static/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
-  <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
-
-  <!-- Theme JavaScript -->
-  <script src="/static/js/grayscale.min.js"></script>
+      <!-- Theme JavaScript -->
+      <script src="static/js/creative.js"></script>
 
 </body>
 
